--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ go:
 script: 
   - go test -v -coverprofile=cover.out
   - go tool cover -html=cover.out -o cover.html
+
+deploy:
+  - provider: pages
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+    keep-history: true
+    local-dir: html
+    on:
+      branch: master
