--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ go:
 
 script: 
   - go test -v -coverprofile=cover.out
-  - go tool cover -html=cover.out -o cover.html
+  - mkdir ./html
+  - go tool cover -html=cover.out -o ./html/index.html
 
 deploy:
   - provider: pages
